# adminless-excel

./: .gitignore  AGENTS.md  Technical_Challenge_Outline.md  remainining features.md
backend/: .env.example  .gitignore  pyproject.toml  railway.json  requirements.txt
backend/src/: __init__.py  config.py  main.py
backend/src/agent/: __init__.py  core.py  tools.py
backend/src/api/routes/: chat.py  data.py  export.py  session.py  upload.py
backend/src/models/: requests.py  responses.py
backend/src/sandbox/: __init__.py  e2b_manager.py
frontend/: nixpacks.toml  package-lock.json  package.json  railway.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/manage/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ChartRenderer.tsx  ChatInput.tsx  DataTable.tsx  EditableDataTable.tsx  providers.tsx
frontend/components/ui/: combobox.tsx  dropdown-menu.tsx  select.tsx
frontend/lib/: api.ts
