[project]
name = "adminless-backend"
version = "0.1.0"
description = "LLM-powered data analysis tool backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-ai>=0.0.40",
    "e2b-code-interpreter>=1.0.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
